<resources>
    <string name="app_name">Hello Android</string>
    <string name="title_activity_maps">Map</string>
    <string name="business_name">Udacity</string>
    <string name="address">2465 Latham St</string>
    <string name="city_state">Mountain View, CA</string>
    <string name="zip_code">94043</string>
    <string name="phone_number">650-555-5555</string>
    <string name="website">www.udacity.com</string>
</resources>
