<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.android.helloandroid.MainActivity">

    <ImageView
        android:id="@+id/introPicture"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pexelsphoto267514" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/businessName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_name"
            tools:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            tools:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/citystate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_state"
            tools:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/zipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip_code"
            tools:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            tools:fontFamily="sans-serif"
            android:textColor="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray"
            android:autoLink="phone"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@android:color/darker_gray"
            android:textColorLink="@android:color/darker_gray"
            android:autoLink="web"
            android:textSize="17sp"
            tools:fontFamily="sans-serif" />

    </LinearLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.helloandroid.MapsMarkerActivity" />

</LinearLayout>
